[gd_scene load_steps=2 format=3 uid="uid://bg7d2fn6ctm4l"]

[ext_resource type="Script" uid="uid://cvod33x6kuebs" path="res://battle/ui/selected_ship/items/item_display.gd" id="1_nrex8"]

[node name="ItemDisplay" type="MarginContainer"]
script = ExtResource("1_nrex8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WeaponsUIContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilitiesUIContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradesUIContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
